@@ -6,6 +6,14 @@
   @apply w-overflow-y-hidden sm:w-overflow-y-auto;
 }
 
+.side-panel-resizing {
+  @apply w-select-none w-cursor-ew-resize;
+
+  .form-side {
+    @apply w-transition;
+  }
+}
+
 .form-side {
   @apply w-absolute
       w-right-0
@@ -15,18 +23,16 @@
       md:w-w-1/3
       w-transform
       w-translate-x-full
-      w-px-5
-      xl:w-px-10
-      w-py-4
       w-bg-white
       w-box-border
-      w-transition
+      w-transition-all
+      motion-reduce:w-transition-none
       w-duration-300
       w-border-l
       w-border-grey-100
-      w-overflow-y-auto
-      w-scrollbar-thin
+      w-min-w-full
       md:w-min-w-[22.875rem]
+      w-max-w-full
       sm:w-max-w-[22.5rem]
       md:w-max-w-[35.937rem]
       lg:w-max-w-[31.25rem]
@@ -41,6 +47,10 @@
     @apply w-transition-none;
   }
 
+  &--preview {
+    @apply sm:w-max-w-[70vw];
+  }
+
   &__close-button {
     @apply w-text-primary w-absolute w-left-3 w-top-3 hover:w-text-primary-200 w-bg-white w-p-3 w-hidden w-transition;
 
@@ -49,12 +59,45 @@
     }
   }
 
+  &__resize-grip-container {
+    @apply w-absolute w-place-items-center w-hidden md:w-flex w-z-10 w-left-[-21.5px];
+
+    height: calc(100% - theme('spacing.8'));
+  }
+
+  &__resize-grip {
+    @apply w-text-primary hover:w-text-primary-200 w-border w-border-transparent w-rounded w-bg-white w-p-3 w-hidden w-touch-pinch-zoom w-cursor-ew-resize;
+
+    .form-side--open & {
+      @apply w-flex;
+    }
+
+    &:focus-within:has(:focus-visible) {
+      @include focus-outline;
+    }
+
+    @supports not selector(:focus-visible) {
+      &:focus-within {
+        /* Fallback for browsers without :focus-visible support */
+        @include focus-outline;
+      }
+    }
+
+    .icon {
+      @apply w-w-4 w-h-4;
+    }
+  }
+
+  &__width-input {
+    @apply w-w-0 w-h-0 w-opacity-0 w-absolute w-pointer-events-none;
+  }
+
   &--open .form-side__close-button,
   &--open .form-side__panel {
     @apply w-block;
   }
 
   &__panel {
-    @apply w-hidden w-h-full;
+    @apply w-px-5 xl:w-px-10 w-py-4 w-w-full w-h-full w-overflow-y-auto w-scrollbar-thin w-hidden;
   }
 }
